admission/ValidatingAdmissionPolicy/policies/procmount/initcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: procmount-initcontainers
  annotations:
    kubeapt.io/uuid: "5de6bf0d-2a03-45c3-91ce-197bced1ee21"
spec:
  hostUsers: false
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
